About us and social media

--- a/template/country/home.html
+++ b/template/country/home.html
@@ -71,12 +71,30 @@
       </div>
     </div>
   </div>
+
 <br>
   <h1>DATOS CURIOSOS Y ESTADÍSTICAS SOBRE ARGENTINA</h1>
+<p>1. Argentina es el octavo pais más grande del mundo <i class="fa-solid fa-8"></i></p>
+<p>2. Argentina es uno de los países con mayor reserva de agua potable <i class="fa-solid fa-hand-holding-droplet"></i></p>
+<p>3. La carne vacuna argentina es reconocida a nivel mundial <i class="fa-solid fa-utensils"></i></p>
+
 <br>
-<p>1. Argentina es el octavo pais más grande del mundo<i class="fa-solid fa-8"></i></p>
-<p>2. Argentina es uno de los países con mayor reserva de agua potable<i class="fa-solid fa-hand-holding-droplet"></i></p>
-<p>3. La carne vacuna argentina es reconocida a nivel mundial<i class="fa-solid fa-steak"></i></p>
+<h1>ACERCA DE MÍ</h1>
+<h3>Camila María Alfaro Díaz</h3>
+<h3>Estudiante de Ingeniería de Negocios</h3>
+<img src="/landing-page-pais-template/imagenes/CamiPic.png" alt="" width="200">
+<p><i class="fa-brands fa-linkedin-in"></i> CamilaAlfaro07</p>
+<p><i class="fa-brands fa-github"></i> https://github.com/CamilaCF22 </p>
+<p><i class="fa-solid fa-envelope"></i> 20204002@esen.edu.sv</p>
+
+<br>
+<footer>
+<p><i>Redes sociales</i></p>
+<p><i class="fa-brands fa-facebook"></i> Camila Alfaro</p>
+</footer>
 
 
 {% endblock %}
+{% block customScripts %}
+<script src="https://kit.fontawesome.com/14bc1c0560.js" integrity="sha384-vuADQJABqJxO5PQ2i3vtGy2iQ5N1PhjsSTwvvNj81QMVUxSs5eVu2dpwu1PpS1Yf" crossorigin="anonymous"></script>
+{% endblock customScripts %}
