--- a/template/country/home.html
+++ b/template/country/home.html
@@ -93,6 +93,9 @@
 <p><i class="fa-brands fa-facebook"></i> Camila Alfaro</p>
 </footer>
 
+<br>
+<a href="{{ url_for('countrymessages.create') }}">Send us a message</a>
+
 
 {% endblock %}
 {% block customScripts %}
